<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFilter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="6dp"
            android:src="@drawable/icon_filter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/mtvHigh"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:text="@string/high"
            android:textSize="18sp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/filter_btn_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivFilter"
            app:layout_constraintBottom_toBottomOf="@id/ivFilter"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorYellow"
            android:text="@string/medium"
            android:textSize="18sp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/filter_btn_shape"
            app:layout_constraintStart_toEndOf="@id/mtvHigh"
            app:layout_constraintBottom_toBottomOf="@id/ivFilter"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:text="@string/low"
            android:textSize="18sp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/filter_btn_shape"
            app:layout_constraintStart_toEndOf="@id/mtvMedium"
            app:layout_constraintBottom_toBottomOf="@id/ivFilter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/rv_notes_item"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/clFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:elevation="8dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>